src/main/default/objects/Flow__c/Flow__c.object-meta.xml
<CustomObject>
    <description>An indexable Flow.</description>
    <label>Flow</label>
    <nameField>
        <label>Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>