src/main/default/objects/Flow__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the Flow.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>