src/main/default/objects/Flow__c/fields/FirstSteps__c.field-meta.xml
<CustomField>
    <fullName>FirstSteps__c</fullName>
    <description>The first steps of the flow for augmented description.</description>
    <label>FirstSteps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>