src/main/default/objects/Flow__c/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <description>The Flow API name</description>
    <label>FlowAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>